# ai-content-generator

./: README.md  UI_README.md  pyproject.toml  report.md  run_simple_ui.py  run_ui.py
output/: 1._After_getting_feedback_from_the_technical_reviewer,_update_the_technical_blog_post_and_make_it_more_popular_based_on_the_feedback_20250619_131324.md  1._After_getting_feedback_from_the_technical_reviewer,_update_the_technical_blog_post_and_make_it_more_popular_based_on_the_feedback_20250619_132102.md  1._Review_and_incorporate_the_technical_reviewer's_feedback_to_ensure_the_article_meets_Medium's_high-quality_standards_20250620_113700.md  1._Review_and_incorporate_the_technical_reviewer's_feedback_to_ensure_the_article_meets_Medium's_high-quality_standards_20250620_114544.md  1._Review_and_incorporate_the_technical_reviewer's_feedback_to_ensure_the_article_meets_Medium's_high-quality_standards_20250620_123929.md
src/blog_generator/: crew.py  main.py  simple_ui.py  ui.py
src/blog_generator/config/: agents.yaml  tasks.yaml
src/blog_generator/utils/: __init__.py  content_analyzer.py  diagram_generator.py  file_utils.py
