[project]
name = "blog_generator"
version = "0.1.0"
description = "blog-generator using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai>=0.130.0,<1.0.0",
    "gradio>=4.0.0",
    "markdown>=3.5.0",
]

[project.scripts]
blog_generator = "blog_generator.main:run"
run_crew = "blog_generator.main:run"
train = "blog_generator.main:train"
replay = "blog_generator.main:replay"
test = "blog_generator.main:test"
ui = "blog_generator.ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
